--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,16 @@
 // sidebar
-$menuText:#424242;//#bfcbd9;
-$menuActiveText:#283593;//#409EFF;
-$subMenuActiveText:#212121;//#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
+$menuText: #424242; //#bfcbd9;
+$menuActiveText: #283593; //#409EFF;
+$subMenuActiveText: #212121; //#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#eeeeee;//#304156;
-$menuHover:#bcbcbc;//#263445;
+$menuBg: #eeeeee; //#304156;
+$menuHover: #bcbcbc; //#263445;
 
-$subMenuBg:#efefef;//#1f2d3d;
-$subMenuHover:#8d8d8d;//#001528;
+$subMenuBg: #efefef; //#1f2d3d;
+$subMenuHover: #8d8d8d; //#001528;
 
 $sideBarWidth: 210px;
+$--font-size : 16px;
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
