--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -53,7 +53,9 @@
 .mt-1 {
     margin-top: 10px;
 }
-
+.ml-1 {
+    margin-left: 10px;
+}
 // 字體
 .el-form-item__label {
     font-size: $--font-size;
