--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -53,9 +53,11 @@
 .mt-1 {
     margin-top: 10px;
 }
+
 .ml-1 {
     margin-left: 10px;
 }
+
 // 字體
 .el-form-item__label {
     font-size: $--font-size;
@@ -92,4 +94,11 @@
 
 .label-blue-color .el-form-item__label {
     color: #1e88e5;
+}
+
+.el-loading-spinner {
+    top: 18%;
+    .el-loading-text {
+        font-size: x-large;
+    }
 }
